# ProjectNocturne

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Nocturne.sln  Nocturne.vcxproj  README.md
app/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
dependencies/GLM/: CMakeLists.txt
dependencies/OpenGL/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
doc/: CMakeLists.txt  doxygen.cfg
src/: CMakeLists.txt  Window.h  main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  IUserControllable.hpp
src/Input/: CMakeLists.txt  IInputListener.hpp  IKeyboardListener.hpp  IMouseListener.hpp  Input.cpp  Input.hpp  KeyCodes.hpp
src/Window/: CMakeLists.txt  IKeyboardListener.hpp  IMouseListener.hpp  Window.cpp  Window.hpp
